@@ -358,6 +358,11 @@
 # Example:
 #CA-file=/etc/ssh/id_rsa.cert
 
+# Curve name for EC ciphers, if supported by OpenSSL library (TLS and DTLS).
+# The default value is prime256v1.
+#
+#ec-curve-name=prime256v1
+
 # Flag to prevent stdout log messages.
 # By default, all log messages are going to both stdout and to 
 # the configured log file. With this option everything will be 
