@@ -1,6 +1,8 @@
 12/10/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.1.2.2 'Arch Lector':
 	- ps output typo fixed (TLS params).
+	- configurable EC curve name.
+	- CLI TLS-related information extended.
 	
 12/09/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.1.2.1 'Arch Lector':
